RESOLVED FIXED322285
[Site Isolation] Frame process is terminated before pageswap and unload event handlers run
https://bugs.webkit.org/show_bug.cgi?id=322285
Summary [Site Isolation] Frame process is terminated before pageswap and unload event...
Sihui Liu
Reported 2026-08-21 09:57:46 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-08-21 10:00:20 PDT
Sihui Liu
Comment 2 2026-08-21 11:18:13 PDT
EWS
Comment 3 2026-08-24 16:03:45 PDT
Committed 319732@main (9bff36df8c41): <https://commits.webkit.org/319732@main> Reviewed commits have been landed. Closing PR #72139 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.